deploy/gateway/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg
  labels:
    app.kubernetes.io/name: eg
    app.kubernetes.io/part-of: k8sgateway
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: k8sgateway-proxy
    namespace: envoy-gateway-system
